# smart-ticket-classifier

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/routes/: audit.py  classify.py  examples.py  health.py  metrics.py
app/core/: __init__.py  config.py  database.py  errors.py  logging.py  middleware.py
app/domain/: enums.py  models.py  rules.py
app/infra/repositories/: audit_repository.py  ticket_repository.py
app/prompts/: classification_prompt.txt
app/schemas/: audit.py  common.py  examples.py  metrics.py  ticket.py
app/services/: audit_service.py  classification_service.py  llm_classifier.py  metrics_service.py
data/: sample_tickets.json
docs/: architecture.md  evaluation_report.json
scripts/: evaluate_classifier.py
tests/: __init__.py  conftest.py  test_api.py  test_invalid_input.py  test_llm_fallback.py  test_priority_conflict.py  test_rules.py  test_rules_edge_cases.py
